# website

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  args.go  auth.go  database.go  database_test.go  docker-compose.yml  go.mod  go.sum  main.go  michaelfbryan.com  package.json  requirements.txt  routing.go  routing_test.go  server.go  server_test.go  times.go  times_test.go  users.go  users_test.go  website.service
ansible/: ansible.cfg  hosts  main.yml  site.yml
api/: api.pb.go  api.pb.gw.go  api.proto  api.swagger.json  docs.go
assets/: helpers.js  master.css
cmd/website-server/: main.go
cmd/websitectl/: main.go
frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: Api.js  Api.test.js  App.js  App.vue  Contact.js  Entry.js  Login.js  Main.js  Resume.js  Timesheets.js  index.css  index.js  reducers.js  router.ts  store.js  store.ts
home/: urls.py
home/templates/: base.html
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2017-10-01-054818_initial/: up.sql
migrations/2017-12-30-181600_create_users/: up.sql
src/: db.rs  endpoints.rs  errors.rs  lib.rs  macros.rs  main.rs  models.rs  sessions.rs  static_files.rs  times.rs  traits.rs  utils.rs
src/database/: mod.rs  models.rs  (+4 more)
static/: index.js  master.css
templates/: admin.tera  base.html.tera  base.tera  home.html.tera  index.tera  internal_server_error.html.tera  login.tera  login_page.html.tera  macros.html.tera  not_found.html.tera  resume.html.tera  unauthorized.html.tera
tests/: database.rs  integration_tests.rs
times/: admin.py  forms.py  models.py  serializers.py  test.py  urls.py  views.py
timesheets/: settings.py  urls.py
website/: production_settings.py  settings.py  urls.py  wsgi.py
website-cli/: Cargo.toml
(+82 files in other folders)
