[package]
name = "website"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]

[dependencies]
rocket = "0.3.5"
rocket_codegen = "0.3.5"
rocket_contrib = { version = "0.3.5", features = ["uuid", "tera_templates"] }
log = "0.4.0"
diesel = { version = "1.0.0-rc1", features = ["postgres", "sqlite"] }
bcrypt = "0.1.5"
failure = "0.1.1"
failure_derive = "0.1.1"

[dev-dependencies]
diesel_migrations = "1.0.0-rc1"
