[package]
name = "website"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]

[dependencies]
rocket = { version = "0.3", features = ["tls"] }
rocket_codegen = "0.3"
rocket_contrib = { version = "0.3.5", features = ["uuid", "tera_templates"] }
log = "0.4"
diesel = { version = "1.0.0-rc1", features = ["postgres", "sqlite", "chrono"] }
bcrypt = "0.1"
failure = "0.1"
uuid = { version = "0.5", features = ["serde", "v4"] }
dotenv = "0.10"
r2d2 = "0.8"
r2d2-diesel = "1.0.0-rc1"
serde = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
diesel_migrations = "1.0.0-rc1"

[workspace]
members = ["website-cli"]
